<resources>
    <string name="app_name">VirtualShop</string>
    <string name="activity_main_access">Acceder</string>
    <string name="activity_main_sign_up">Regístrate</string>
    <string name="activity_main_logo_cat">logo_gato</string>
    <string name="activity_main_logo_allin">logo_allin</string>
    <string name="activity_access_app_hello_again">Hola de nuevo ¡¡</string>
    <string name="activity_access_app_log_account">Accede a tu cuenta</string>
    <string name="activity_access_app_enter_user_or_email">Ingresa tu usuario o correo electrónico</string>
    <string name="activity_access_app_password">Contraseña</string>
    <string name="activity_access_app_remember_me">Recuérdame</string>
    <string name="activity_access_app_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="activity_access_app_with_google">Inicia sesión con tu cuenta Google</string>
    <string name="activity_access_app_access">Acceder</string>
    <string name="activity_sign_up_tittle">Regístrate en All in</string>
    <string name="activity_sign_up_insert_user">Ingresa un usuario</string>
    <string name="activity_sign_up_insert_your_name">Ingresa tu(s) nombre(s)</string>
    <string name="activity_sign_up_insert_your_lastname">Ingresa tus apellidos</string>
    <string name="activity_sign_up_female">Femenino</string>
    <string name="activity_sign_up_male">Masculino</string>
    <string name="activity_sign_up_document_number">N° de documento</string>
    <string name="activity_sign_up_insert_your_direction">Ingresa tu dirección</string>
    <string name="activity_sign_up_insert_your_email">Ingresa tu correo electrónico</string>
    <string name="activity_sign_up_password">Contraseña</string>
    <string name="activity_sign_up_confirm_password">Confirma tu contraseña</string>
    <string name="activity_sign_up_terms_and_conditions">Al hacer clic en \'registrarse\', acepta los Términos de servicio y la Política de privacidad de All in app</string>
    <string name="activity_sign_up_sign_up">Registrarse</string>
    <string name="activity_sign_up_gender">Género</string>
    <string name="activity_sign_up_document_type">Tipo de documento</string>
    <string name="activity_succesfull_registration_succesfull">Su registro fue exitoso</string>
    <string name="layout_item_document">DNI</string>
    <string name="activity_sign_up_document">DNI</string>
    <string name="title_activity_fragment_content">FragmentContentActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">profile</string>
    <string name="title_shopping">shopping</string>
    <string name="title_orders">orders</string>
    <string name="name_product">NameProduct</string>
    <string name="description_product">DesciptionProduct</string>
    <string name="price_product">S/. 120.00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_image_product">Product Image</string>
    <string name="description_image_button_for_add_product">Button for add product</string>
    <string name="text_view_namecategory">nameCategory</string>
    <string name="title_popular_products">Productos populares</string>
    <string name="title_category">Categorías</string>
    <string name="title_search">search</string>
    <string name="title_result_find_products" />
    <string name="title_shopping_car">Shopping Car</string>
    <string name="title_quantity">0</string>
    <string name="title_button_delete">button delete</string>
    <string name="title_subtotal">Subtotal</string>
    <string name="title_i_g_v">I.G.V</string>
    <string name="title_total">Total</string>
    <string name="value_subtotal">00.00</string>
    <string name="value_igv">00.00</string>
    <string name="value_total">00.00</string>
    <string name="title_shopping_fragment">Tu carrito de compras</string>
    <string name="title_delivery_preferences">Elige tus \npreferencias \nde envio</string>
    <string name="hint_date_delivery"> Fecha de envío</string>
    <string name="title_pay">Pagar</string>
    <string name="hint_cellphone_contact"> Celular de contacto</string>
    <string name="hint_other_address">Otra dirección</string>
    <string name="hint_account">De la cuenta</string>
    <string name="title_delivery_address">Dirección de envío</string>
    <string name="title_delivery_fact">Tus datos de envio</string>
    <string name="title_pay_products">Pago de productos</string>
    <string name="hint_name_holder"> Nombre del titular</string>
    <string name="hint_card_number"> Número de tarjeta</string>
    <string name="hint_date_of_expiry"> Fecha de vencimiento de tarjeta</string>
    <string name="hint_cvv"> CVV</string>
    <string name="hint_password_card"> Contraseña de tarjeta</string>
    <string name="hint_type_card"> Tipo de tarjeta</string>
    <string name="title_go_pay">Ir a pagar</string>
    <string name="title_order">Pedidos</string>
    <string name="title_profile_main">Perfil</string>
    <string name="title_name">Name</string>
    <string name="title_address">Address</string>
    <string name="title_personal_information">Información personal</string>
    <string name="title_your_shopping">Tus compras</string>
    <string name="title_pay_method">Método de pago</string>
    <string name="title_logout">Cerrar sesión</string>
</resources>