<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itemHome"
        android:icon="@drawable/ico_home_24"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/itemShoppingCar"
        android:icon="@drawable/ico_shopping_cart_24"
        android:title="@string/title_shopping_car"/>

    <item
        android:id="@+id/itemSearch"
        android:icon="@drawable/ico_search_24"
        android:title="@string/title_search"/>

    <item
        android:id="@+id/orderProfile"
        android:icon="@drawable/ico_order_truck_24"
        android:title="@string/title_orders"/>

    <item
        android:id="@+id/itemProfile"
        android:icon="@drawable/ico_baseline_person_24"
        android:title="@string/title_profile"/>
</menu>